src/main/java/org/dantlr/Expr.g4
grammar Expr;

prog : stat+;

stat: expr NEWLINE EOF         # printExpr
    | ID '=' expr NEWLINE EOF  # assign
    | NEWLINE EOF              # blank
    ;

expr: expr op=('*'|'/') expr    # MulDiv
| expr op=('+'|'-') expr        # AddSub
| INT                           # int
| ID                            # id
| '(' expr ')'                  # parens
;

MUL : '*' ; // assigns token name to '*' used above in grammar
DIV : '/' ;
ADD : '+' ;
SUB : '-' ;
ID : [a-zA-Z]+ ;
INT : [0-9]+ ;
NEWLINE:'\r'? '\n' ;
WS : [ \t]+ -> skip;
